--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ngx-admin Demo Application</title>
+  <title>Intercept</title>
 
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpVhQiwAllg1RAFaxMWSpQruuGARy0Y1k&libraries=places"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn1rLsAmakZZw29CIxDTd7o_30XgsXheE&amp;libraries=places"></script>
+
 </head>
 <body>
   <ngx-app>Loading...</ngx-app>
