--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn1rLsAmakZZw29CIxDTd7o_30XgsXheE&amp;libraries=places"></script>
+  <script defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn1rLsAmakZZw29CIxDTd7o_30XgsXheE&amp;libraries=places"></script>
 
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <ngx-app>Loading...</ngx-app>
@@ -25,5 +27,6 @@
     <div class="blob blob-5"></div>
   </div>
 
+  <noscript>Por favor habilite o Javascript para usar essa aplicação.</noscript>
 </body>
 </html>
